// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render feature tag 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ECEEF5;
  border-radius: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #5E637A;
  cursor: pointer;
  fill: #5E637A;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  font-size: 0.875rem;
  gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  outline: none;
  padding-block: calc(0.5rem / 4);
  padding-inline: 0.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0.active {
  background-color: #F0F3FF;
  color: #2852EB;
  fill: #3C64F4;
}

.c0:hover,
.c0.active:hover {
  background-color: #DBE3FE;
  color: #0B38D9;
  fill: #3C64F4;
}

.c0:focus {
  outline: 4px solid #DBE3FE;
}

.c0:active,
.c0.active:active {
  background-color: #9EB3FC;
  color: #0B38D9;
  fill: #0024A6;
}

.c0:focused:active {
  background-color: #F0F3FF;
  color: #0B38D9;
  fill: #0B38D9;
  outline: 4px solid #9EB3FC;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<a
  class="c0"
  title="Feature Tag"
>
  <span
    class="c1"
  >
    Feature Tag
  </span>
</a>
`;

exports[`renders as active 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ECEEF5;
  border-radius: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #5E637A;
  cursor: pointer;
  fill: #5E637A;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  font-size: 0.875rem;
  gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  outline: none;
  padding-block: calc(0.5rem / 4);
  padding-inline: 0.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0.active {
  background-color: #F0F3FF;
  color: #2852EB;
  fill: #3C64F4;
}

.c0:hover,
.c0.active:hover {
  background-color: #DBE3FE;
  color: #0B38D9;
  fill: #3C64F4;
}

.c0:focus {
  outline: 4px solid #DBE3FE;
}

.c0:active,
.c0.active:active {
  background-color: #9EB3FC;
  color: #0B38D9;
  fill: #0024A6;
}

.c0:focused:active {
  background-color: #F0F3FF;
  color: #0B38D9;
  fill: #0B38D9;
  outline: 4px solid #9EB3FC;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 1.125rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  width: 1.125rem;
}

.c1 > svg {
  -webkit-transform: scale(0.75);
  -ms-transform: scale(0.75);
  transform: scale(0.75);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<a
  class="c0 active"
  title="Feature Tag"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="brjSIf"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="m19.46 8 .79-1.75L22 5.46a.5.5 0 0 0 0-.91l-1.75-.79L19.46 2a.5.5 0 0 0-.91 0l-.79 1.75-1.76.79a.5.5 0 0 0 0 .91l1.75.79.79 1.76c.18.39.74.39.92 0M11.5 9.5 9.91 6c-.35-.78-1.47-.78-1.82 0L6.5 9.5 3 11.09c-.78.36-.78 1.47 0 1.82l3.5 1.59L8.09 18c.36.78 1.47.78 1.82 0l1.59-3.5 3.5-1.59c.78-.36.78-1.47 0-1.82zm7.04 6.5-.79 1.75-1.75.79a.5.5 0 0 0 0 .91l1.75.79.79 1.76a.5.5 0 0 0 .91 0l.79-1.75 1.76-.79a.5.5 0 0 0 0-.91l-1.75-.79-.79-1.76a.508.508 0 0 0-.92 0"
      />
    </svg>
  </div>
  <span
    class="c2"
  >
    Feature Tag
  </span>
</a>
`;

exports[`renders with icon 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ECEEF5;
  border-radius: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #5E637A;
  cursor: pointer;
  fill: #5E637A;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  font-size: 0.875rem;
  gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  outline: none;
  padding-block: calc(0.5rem / 4);
  padding-inline: 0.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0.active {
  background-color: #F0F3FF;
  color: #2852EB;
  fill: #3C64F4;
}

.c0:hover,
.c0.active:hover {
  background-color: #DBE3FE;
  color: #0B38D9;
  fill: #3C64F4;
}

.c0:focus {
  outline: 4px solid #DBE3FE;
}

.c0:active,
.c0.active:active {
  background-color: #9EB3FC;
  color: #0B38D9;
  fill: #0024A6;
}

.c0:focused:active {
  background-color: #F0F3FF;
  color: #0B38D9;
  fill: #0B38D9;
  outline: 4px solid #9EB3FC;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  height: 1.125rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  width: 1.125rem;
}

.c1 > svg {
  -webkit-transform: scale(0.75);
  -ms-transform: scale(0.75);
  transform: scale(0.75);
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<a
  class="c0"
  title="Feature Tag"
>
  <div
    class="c1"
  >
    <svg
      aria-hidden="true"
      class="brjSIf"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="m19.46 8 .79-1.75L22 5.46a.5.5 0 0 0 0-.91l-1.75-.79L19.46 2a.5.5 0 0 0-.91 0l-.79 1.75-1.76.79a.5.5 0 0 0 0 .91l1.75.79.79 1.76c.18.39.74.39.92 0M11.5 9.5 9.91 6c-.35-.78-1.47-.78-1.82 0L6.5 9.5 3 11.09c-.78.36-.78 1.47 0 1.82l3.5 1.59L8.09 18c.36.78 1.47.78 1.82 0l1.59-3.5 3.5-1.59c.78-.36.78-1.47 0-1.82zm7.04 6.5-.79 1.75-1.75.79a.5.5 0 0 0 0 .91l1.75.79.79 1.76a.5.5 0 0 0 .91 0l.79-1.75 1.76-.79a.5.5 0 0 0 0-.91l-1.75-.79-.79-1.76a.508.508 0 0 0-.92 0"
      />
    </svg>
  </div>
  <span
    class="c2"
  >
    Feature Tag
  </span>
</a>
`;
